[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/components/Player/Helpers/HUD.gd" type="Script" id=1]
[ext_resource path="res://src/assets/img/HUD/hud_bars.png" type="Texture" id=2]
[ext_resource path="res://src/components/Player/Helpers/PlayerScreen.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 11 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 12, 240, 11 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 240, 11 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 36, 176, 6 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 43, 176, 6 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StatBars" type="Control" parent="."]
margin_right = 101.0
margin_bottom = 146.0

[node name="HP_under" type="TextureProgress" parent="StatBars"]
margin_left = 20.0
margin_top = 20.0
margin_right = 260.0
margin_bottom = 31.0
value = 100.0
texture_progress = SubResource( 1 )

[node name="HP_over" type="TextureProgress" parent="StatBars"]
margin_left = 20.0
margin_top = 20.0
margin_right = 260.0
margin_bottom = 31.0
value = 100.0
texture_under = SubResource( 2 )
texture_progress = SubResource( 3 )

[node name="Stamina" type="TextureProgress" parent="StatBars"]
margin_left = 20.0
margin_top = 35.0
margin_right = 260.0
margin_bottom = 41.0
value = 100.0
texture_under = SubResource( 4 )
texture_progress = SubResource( 5 )

[node name="Panels" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.19371
margin_top = -0.685372
margin_right = 0.193726
margin_bottom = -0.685364

[node name="PlayerScreen" parent="Panels" instance=ExtResource( 3 )]
visible = false

[node name="Tween" type="Tween" parent="."]
